--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ psutil
 py-tgcalls==1.2.9
 ntgcalls==1.1.2
 pykeyboard
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
+https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 python-dotenv
 pyyaml
 requests
@@ -21,6 +21,7 @@ speedtest-cli
 spotipy
 tgcrypto
 unidecode
+uvloop
 yt-dlp
 youtube-search
 youtube-search-python
