--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pillow
 psutil
 py-tgcalls==1.2.9
 ntgcalls==1.1.2
+gunicorn==20.1.0
 pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 python-dotenv
