--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ ntgcalls==1.1.2
 Flask==2.0.3
 gunicorn==20.1.0
 pykeyboard
-https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
+pyrofork
 python-dotenv
 pyyaml
 requests
