--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ gunicorn==20.1.0
 pykeyboard
 https://github.com/KurimuzonAkuma/pyrogram/archive/v2.1.23.zip
 python-dotenv
+pyrofork
 pyyaml
 requests
 speedtest-cli
